force-app/main/default/objects/Apttus_Config2__TempDisplayColumn__c/Apttus_Config2__TempDisplayColumn__c.object-meta.xml
<CustomObject>
    <description>Holds information about columns displayed in the cart view</description>
    <label>Temp Display Column</label>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Display Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>