force-app/main/default/objects/Apttus_Config2__TempDisplayColumn__c/fields/Apttus_Config2__FieldName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldName__c</fullName>
    <description>The display field API name</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>