force-app/main/default/objects/Apttus_Config2__TempDisplayColumn__c/fields/Apttus_Config2__IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the column is enabled</description>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>