force-app/main/default/objects/Apttus_Config2__TempDisplayColumn__c/fields/Apttus_Config2__IsVisible__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsVisible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the column is visible</description>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>